--- a/index.html
+++ b/index.html
@@ -4,35 +4,56 @@
         <!--meta tag to indicate support for UTF-8 character encoding-->
         <meta charset="UTF-8">
         <!--meta viewport tag to allow for content scaling on device-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-        <!--meta tag to allow compatibility with older browsers-->
-        <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-        <!--link to free google fonts api-->
-        <link rel="preload" href="https://fonts.googleapis.com/css?family=Lora&amp;display=swap">
-        <link rel="stylesheet" type="text/css" href="style.css" >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Mwihoko Conservancy</title>
     </head>
     <body>
-        <div>
-            <h1>
-                <img id="logo" src="./images/Screenshot_20240311_225559_Bing.svg" alt="Mwihoko Wildlife Conservancy Logo" title="conservancy logo">
-                Mwihoko Wildlife Conservancy
-                <br>
-                <img id="background-1" src="./images/sunrise-mt-kenya.svg" alt="sunrise-mt-kenya">
-            </h1>
-        </div>
-        <h2>
-            Make The World Our Home
-        </h2>
-        <p>
-            <img src="./images/zebra-in-sepia.svg" alt="Zebra Grazing">
-            <div class="promotion-content">
-            Live out your golden years touring this lavish, lush conservancy.
-            <br>
-            Take a deep breath in the cool fresh breeze
-            <br>
-            Feel the rain on your skin
+        <!--a div to contain the body contents-->
+        <div class="container">
+            <!--a div for ther navbar, the home button will be on the left in css, the rest on the right-->
+            <div class="navbar">
+                <img src="images/home-3-128.png" class="logo-home" alt="home icon">
+                <nav>
+                    <ul>
+                        <!--the href will be left blank for now since it will link to the pages i.e. html files that my colleagues will make-->
+                        <li><a href="">ABOUT</a></li>
+                        <li><a href="">Gallery</a></li>
+                        <li><a href="">Contact</a></li>
+                        <li><a href="">Wildlife Education</a></li>
+                        <li><a href="">Community</a></li>
+                    </ul>
+                </nav>
+                <!--menu icon aka the hamburger menu but only as an image for this project-->
+                <img src="images/menu.png" class="menu-icon">
             </div>
-        </p>
+            <div class="row">
+                <div class="col">
+                    <h1>WILDLIFE EDUCATION</h1>
+                    <p>The Wildlife Education Programme aims to raise awareness, improve knowledge, foster positive attitude and enhance skills for stakeholders so that they are able to make educated decisions to change their behaviours towards wildlife protection</p>
+                    <button type="button">Book a Tour</button>
+                </div>
+                <div class="col">
+                    <div class="card card1">
+                        <h5>Unique Plants</h5>
+                        <p>Learn about the unique natural heritage</p>
+                    </div>
+                    <div class="card card2">
+                        <h5>Animal Diversity</h5>
+                        <p>The animal kingdom. What does it mean to you?</p>
+                    </div>
+                    <div class="card card3">
+                        <h5>Education for All Ages</h5>
+                        <p>Everyone can learn about nature no matter how young or old</p>
+                    </div>
+                    <div class="card card4">
+                        <h5>Future Generations</h5>
+                        <p>Join us in passing down this knowledge for a future filled with wildlife</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </body>
 </html>
