--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
         <div class="navbar">
             <h1 class="logo">Mwihoko Conservancy</h1>
             <ul>
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="#">Home Page</a></li>
             <li><a href="#">Conservation</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Community</a></li>
